--- a/news/templates/news/posttemplate.html
+++ b/news/templates/news/posttemplate.html
@@ -68,9 +68,9 @@
     </div>
     <br>
     <div class="well">
-      <a id="truthText" class="col s12">{{ article.truth | safe }}</a>
-      <a id="conservativeText" class="col s12">{{ article.conservative_opinion | safe }}</a>
-      <a id="liberalText" class="col s12"> {{ article.liberal_opinion | safe }} </a>
+      <a id="truthText" class="col s12"><div class="articleindicator">Just Facts</div>{{ article.truth | safe }}</a>
+      <a id="conservativeText" class="col s12"><hr><div class="conservativearticleindicator">Conservative Commentary</div>{{ article.conservative_opinion | safe }}</a>
+      <a id="liberalText" class="col s12"><hr><div class="liberalarticleindicator">Liberal Commentary</div>{{ article.liberal_opinion | safe }} </a>
     </div>
     <div class="sharingbuttons">
       <!-- Sharingbutton Facebook -->
