--- a/news/static/news/css/style.css
+++ b/news/static/news/css/style.css
@@ -56,7 +56,7 @@ a:hover{
 
 .articleindicator{
   font-size: 12px;
-  color: #ccc;
+  color: #aaa;
 }
 
 .conservativearticleindicator{
@@ -68,6 +68,14 @@ a:hover{
   font-size: 12px;
   color: #337ab7;
 }
+
+.articletext{
+  text-align: justify;
+  margin-bottom: 17px;
+  font-size: 17px;
+  line-height: 27px;
+}
+
 .head{
   text-align: center;
   position: relative;
