--- a/news/templates/news/posttemplate.html
+++ b/news/templates/news/posttemplate.html
@@ -1,63 +1,28 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
-  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=no"/>
-  <title>{{ article.title_text }}</title>
-  <!-- CSS  -->
-  {% load static from staticfiles %}
-  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-  <link href='https://fonts.googleapis.com/css?family=Playfair+Display:400,700,900,400italic,700italic,900italic|Droid+Serif:400,700,400italic,700italic|Cinzel+Decorative' rel='stylesheet' type='text/css'>
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-  <link href="{% static 'news/css/style.css' %}" type="text/css" rel="stylesheet" media="screen,projection"/>
-  <link href="{% static 'news/css/sharing.css' %}" type="text/css" rel="stylesheet" media="screen,projection"/>
-  <link rel="shortcut icon" type="image/png" href="{% static 'news/images/favicon.ico' %}"/>
-  <title>Neutral News</title>
-</head>
-<body>
+{% extends 'news/base.html' %}
 
-  <div class="head">
-    <div class="headerobjectswrapper">
-      <header>
-        <a href="{% url 'index' %}">The Neutral News</a>
-      </header>
-    </div>
-    <div class="subhead" >
-      <table style="width:100%">
-        <tr>
-          <td style="width:33%">1 FEBRUARY 2017</td>
-          <td style="width:33%">A nearly unbiased newspaper</td>
-          <td style="width:33%">VOLUME 1</td>
-        </tr>
-      </table>
-    </div>
+{% block content %}
+
+
+<title>{{ article.title_text }}</title>
+<div class="container-fluid">
+  <h2>{{ article.title_text }}</h2>
+  <img src="{{ article.image.url }}" style='width:100%;' border="0" alt="Null">
+  <div class="chip">
+    <font color="#731646">
+      <b>
+        {{ article.conservative_author }}
+      </b>
+    </font>
   </div>
-  <div class="head topbar">
-    <h4>
-      <a href="{% url 'about' %}">About</a>  |  Popular  |  Categories  | Search
-    </h4>
+  <div class="chip">
+    <font color="#4C1C52">
+      <b>
+        {{ article.liberal_author }}
+      </b>
+    </font>
   </div>
 
-
-  <div class="container-fluid">
-    <h2>{{ article.title_text }}</h2>
-    <img src="{{ article.image.url }}" style='width:100%;' border="0" alt="Null">
-    <div class="chip">
-      <font color="#731646">
-        <b>
-          {{ article.conservative_author }}
-        </b>
-      </font>
-    </div>
-    <div class="chip">
-      <font color="#4C1C52">
-        <b>
-          {{ article.liberal_author }}
-        </b>
-      </font>
-    </div>
-
-    <div id="the-sticky-div-container">
+  <div id="the-sticky-div-container">
     <div id="the-sticky-div" background-color="white">
       <ul class="nav nav-tabs">
         <li class="active"><a data-toggle="tab" class="nav-item nav-link" href="#justfacts">Just<br> The Facts</a></li>
@@ -67,40 +32,40 @@
     </div>
   </div>
 
-    <div class="well articletext tab-content">
-      <div id="justfacts" class="tab-pane fade in active">
-        <div class="articleindicator">Just Facts</div>{{ article.truth | safe }}
-      </div>
-      <div id="conservative" class="tab-pane fade">
-        <div class="articleindicator">Just Facts</div>{{ article.truth | safe }} <hr><div class="conservativearticleindicator">Conservative Commentary</div>{{ article.conservative_opinion | safe }}
-      </div>
-      <div id="liberal" class="tab-pane fade">
-        <div class="articleindicator">Just Facts</div>{{ article.truth | safe }} <hr><div class="liberalarticleindicator">Liberal Commentary</div>{{ article.liberal_opinion | safe }}
-      </div>
+  <div class="well articletext tab-content">
+    <div id="justfacts" class="tab-pane fade in active">
+      <div class="articleindicator">Just Facts</div>{{ article.truth | safe }}
     </div>
-    <div class="sharingbuttons">
-      <!-- Sharingbutton Facebook -->
-      <a class="resp-sharing-button__link" href="https://facebook.com/sharer/sharer.php?u=https%3A%2F%2Fneutralnews.site%2Fpost%2F{{ article.slug }}" target="_blank" aria-label="">
-        <div class="resp-sharing-button resp-sharing-button--facebook resp-sharing-button--small"><div aria-hidden="true" class="resp-sharing-button__icon resp-sharing-button__icon--solid">
-          <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M18.77 7.46H14.5v-1.9c0-.9.6-1.1 1-1.1h3V.5h-4.33C10.24.5 9.5 3.44 9.5 5.32v2.15h-3v4h3v12h5v-12h3.85l.42-4z"/></svg>
-        </div>
-      </div>
-    </a>
-
-    <!-- Sharingbutton Twitter -->
-    <a class="resp-sharing-button__link" href="https://twitter.com/intent/tweet/?text={{ article.title_text }}&amp;url=https%3A%2F%2Fneutralnews.site%2Fpost%2F{{ article.slug }}" target="_blank" aria-label="">
-      <div class="resp-sharing-button resp-sharing-button--twitter resp-sharing-button--small"><div aria-hidden="true" class="resp-sharing-button__icon resp-sharing-button__icon--solid">
-        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M23.44 4.83c-.8.37-1.5.38-2.22.02.93-.56.98-.96 1.32-2.02-.88.52-1.86.9-2.9 1.1-.82-.88-2-1.43-3.3-1.43-2.5 0-4.55 2.04-4.55 4.54 0 .36.03.7.1 1.04-3.77-.2-7.12-2-9.36-4.75-.4.67-.6 1.45-.6 2.3 0 1.56.8 2.95 2 3.77-.74-.03-1.44-.23-2.05-.57v.06c0 2.2 1.56 4.03 3.64 4.44-.67.2-1.37.2-2.06.08.58 1.8 2.26 3.12 4.25 3.16C5.78 18.1 3.37 18.74 1 18.46c2 1.3 4.4 2.04 6.97 2.04 8.35 0 12.92-6.92 12.92-12.93 0-.2 0-.4-.02-.6.9-.63 1.96-1.22 2.56-2.14z"/></svg>
+    <div id="conservative" class="tab-pane fade">
+      <div class="articleindicator">Just Facts</div>{{ article.truth | safe }} <hr><div class="conservativearticleindicator">Conservative Commentary</div>{{ article.conservative_opinion | safe }}
+    </div>
+    <div id="liberal" class="tab-pane fade">
+      <div class="articleindicator">Just Facts</div>{{ article.truth | safe }} <hr><div class="liberalarticleindicator">Liberal Commentary</div>{{ article.liberal_opinion | safe }}
+    </div>
+  </div>
+  <div class="sharingbuttons">
+    <!-- Sharingbutton Facebook -->
+    <a class="resp-sharing-button__link" href="https://facebook.com/sharer/sharer.php?u=https%3A%2F%2Fneutralnews.site%2Fpost%2F{{ article.slug }}" target="_blank" aria-label="">
+      <div class="resp-sharing-button resp-sharing-button--facebook resp-sharing-button--small"><div aria-hidden="true" class="resp-sharing-button__icon resp-sharing-button__icon--solid">
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M18.77 7.46H14.5v-1.9c0-.9.6-1.1 1-1.1h3V.5h-4.33C10.24.5 9.5 3.44 9.5 5.32v2.15h-3v4h3v12h5v-12h3.85l.42-4z"/></svg>
       </div>
     </div>
   </a>
 
-  <!-- Sharingbutton E-Mail -->
-  <a class="resp-sharing-button__link" href="mailto:?subject={{ article.title_text }}&amp;body=https%3A%2F%2Fneutralnews.site%2Fpost%2F{{ article.slug }}" target="_self" aria-label="">
-    <div class="resp-sharing-button resp-sharing-button--email resp-sharing-button--small"><div aria-hidden="true" class="resp-sharing-button__icon resp-sharing-button__icon--solid">
-      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M22 4H2C.9 4 0 4.9 0 6v12c0 1.1.9 2 2 2h20c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zM7.25 14.43l-3.5 2c-.08.05-.17.07-.25.07-.17 0-.34-.1-.43-.25-.14-.24-.06-.55.18-.68l3.5-2c.24-.14.55-.06.68.18.14.24.06.55-.18.68zm4.75.07c-.1 0-.2-.03-.27-.08l-8.5-5.5c-.23-.15-.3-.46-.15-.7.15-.22.46-.3.7-.14L12 13.4l8.23-5.32c.23-.15.54-.08.7.15.14.23.07.54-.16.7l-8.5 5.5c-.08.04-.17.07-.27.07zm8.93 1.75c-.1.16-.26.25-.43.25-.08 0-.17-.02-.25-.07l-3.5-2c-.24-.13-.32-.44-.18-.68s.44-.32.68-.18l3.5 2c.24.13.32.44.18.68z"/></svg>
+  <!-- Sharingbutton Twitter -->
+  <a class="resp-sharing-button__link" href="https://twitter.com/intent/tweet/?text={{ article.title_text }}&amp;url=https%3A%2F%2Fneutralnews.site%2Fpost%2F{{ article.slug }}" target="_blank" aria-label="">
+    <div class="resp-sharing-button resp-sharing-button--twitter resp-sharing-button--small"><div aria-hidden="true" class="resp-sharing-button__icon resp-sharing-button__icon--solid">
+      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M23.44 4.83c-.8.37-1.5.38-2.22.02.93-.56.98-.96 1.32-2.02-.88.52-1.86.9-2.9 1.1-.82-.88-2-1.43-3.3-1.43-2.5 0-4.55 2.04-4.55 4.54 0 .36.03.7.1 1.04-3.77-.2-7.12-2-9.36-4.75-.4.67-.6 1.45-.6 2.3 0 1.56.8 2.95 2 3.77-.74-.03-1.44-.23-2.05-.57v.06c0 2.2 1.56 4.03 3.64 4.44-.67.2-1.37.2-2.06.08.58 1.8 2.26 3.12 4.25 3.16C5.78 18.1 3.37 18.74 1 18.46c2 1.3 4.4 2.04 6.97 2.04 8.35 0 12.92-6.92 12.92-12.93 0-.2 0-.4-.02-.6.9-.63 1.96-1.22 2.56-2.14z"/></svg>
     </div>
   </div>
+</a>
+
+<!-- Sharingbutton E-Mail -->
+<a class="resp-sharing-button__link" href="mailto:?subject={{ article.title_text }}&amp;body=https%3A%2F%2Fneutralnews.site%2Fpost%2F{{ article.slug }}" target="_self" aria-label="">
+  <div class="resp-sharing-button resp-sharing-button--email resp-sharing-button--small"><div aria-hidden="true" class="resp-sharing-button__icon resp-sharing-button__icon--solid">
+    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M22 4H2C.9 4 0 4.9 0 6v12c0 1.1.9 2 2 2h20c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zM7.25 14.43l-3.5 2c-.08.05-.17.07-.25.07-.17 0-.34-.1-.43-.25-.14-.24-.06-.55.18-.68l3.5-2c.24-.14.55-.06.68.18.14.24.06.55-.18.68zm4.75.07c-.1 0-.2-.03-.27-.08l-8.5-5.5c-.23-.15-.3-.46-.15-.7.15-.22.46-.3.7-.14L12 13.4l8.23-5.32c.23-.15.54-.08.7.15.14.23.07.54-.16.7l-8.5 5.5c-.08.04-.17.07-.27.07zm8.93 1.75c-.1.16-.26.25-.43.25-.08 0-.17-.02-.25-.07l-3.5-2c-.24-.13-.32-.44-.18-.68s.44-.32.68-.18l3.5 2c.24.13.32.44.18.68z"/></svg>
+  </div>
+</div>
 </a>
 
 <!-- Sharingbutton LinkedIn -->
@@ -121,42 +86,5 @@
 </div>
 
 <div id="disqus_thread"></div>
-<script>
 
-/**
-*  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
-*  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables*/
-
-var disqus_config = function () {
-  //this.page.url = '{{ article.slug }}';  // Replace PAGE_URL with your page's canonical URL variable
-  this.page.identifier = '{{ article.slug }}'; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
-};
-
-(function() { // DON'T EDIT BELOW THIS LINE
-var d = document, s = d.createElement('script');
-s.src = 'https://neutral-news.disqus.com/embed.js';
-s.setAttribute('data-timestamp', +new Date());
-(d.head || d.body).appendChild(s);
-})();
-</script>
-<noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
-
-</div>
-<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
-
-<script>
-// Cache selectors outside callback for performance.
-$(window).bind("load", function() {
-var $window = $(window),
-$stickyEl = $('#the-sticky-div'),
-elTop = $stickyEl.offset().top;
-
-$window.scroll(function() {
-  $stickyEl.toggleClass('sticky', $window.scrollTop() > elTop);
-})});
-
-</script>
-</body>
-</body>
-</html>
+{% endblock %}
