--- a/news/static/news/css/style.css
+++ b/news/static/news/css/style.css
@@ -27,6 +27,13 @@ header{
   margin-top: 20px;
 }
 
+footer{
+    display: table;
+    text-align: center;
+    margin-left: auto;
+    margin-right: auto;
+}
+
 p{
   margin-top: 0;
   margin-bottom: 20px;
