Fixed Giant Add

--- a/news/templates/news/home.html
+++ b/news/templates/news/home.html
@@ -13,17 +13,20 @@
       {{ Article.preview | safe }}
     </div>
     {% endfor %}
-    <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-    <ins class="adsbygoogle"
-    style="display:block"
-    data-ad-format="fluid"
-    data-ad-layout-key="-63+16-g1-2u+18q"
-    data-ad-client="ca-pub-2054016110375376"
-    data-ad-slot="8691720300"></ins>
-    <script>
-    (adsbygoogle = window.adsbygoogle || []).push({});
-  </script>
-</div>
+    <div class="collumn">
+      <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+      <ins class="adsbygoogle"
+      style="display:block"
+      data-ad-format="fluid"
+      data-ad-layout-key="-63+16-g1-2u+18q"
+      data-ad-client="ca-pub-2054016110375376"
+      data-ad-slot="8691720300"></ins>
+      <script>
+      (adsbygoogle = window.adsbygoogle || []).push({});
+      </script>
+    </div>
+
+  </div>
 </div>
 
 {% endblock %}
