⌚ Published date added

--- a/news/static/news/css/style.css
+++ b/news/static/news/css/style.css
@@ -78,6 +78,11 @@ a:hover{
    width: inherit;
 }
 
+.authors{
+  margin-top: 10px;
+  margin-bottom: 0;
+}
+
 .nav-tabs > li.active > a, .nav-tabs > li.active > a:focus, .nav-tabs > li.active > a:hover {
     color: #555;
     cursor: default;
