⌚ Changed Created and Modified

--- a/news/templates/news/posttemplate.html
+++ b/news/templates/news/posttemplate.html
@@ -8,7 +8,7 @@
   <h2>{{ article.title_text }}</h2>
   <img src="{{ article.image.url }}" style='width:100%;' border="0" alt="Null">
   <div class="authors"> By {{article.conservative_author}} and {{article.liberal_author}}</div>
-  <span class="articleindicator">Article Published: {{ article.pub_date}}</span>
+  <span class="articleindicator">Article Published: {{ article.created}}</span>
 
   <div id="the-sticky-div-container">
     <div id="the-sticky-div" background-color="white">
