--- a/news/templates/news/home.html
+++ b/news/templates/news/home.html
@@ -10,7 +10,7 @@
       <div class="head"><span class="headline hl3"><a href="post/{{ Article.slug }}">{{ Article.title_text }}</a></span><p><span class="headline hl4">by {{Article.conservative_author}} and {{Article.liberal_author}}</span></p></div>
       <a href="post/{{ Article.slug }}"><img src="{{ Article.image.url }}"  style='width:100%;' border="0" alt="Null"></a>
       <br><br>
-      {{ Article.preview | safe }}
+      {{ Article.preview | safe | linebreaksbr }}
     </div>
     {% endfor %}
   </div>
