--- a/news/templates/news/base.html
+++ b/news/templates/news/base.html
@@ -93,7 +93,7 @@ document.getElementById("date").innerHTML = formatDate(new Date());
 *  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
 *  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables*/
 var disqus_config = function () {
-  this.page.url = "{% url 'index' %}/{{ article.slug }}";  // Replace PAGE_URL with your page's canonical URL variable
+  this.page.url = "{% url 'index' %}/post/{{ article.slug }}";  // Replace PAGE_URL with your page's canonical URL variable
   this.page.identifier = '{{ article.slug }}'; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
 };
 (function() { // DON'T EDIT BELOW THIS LINE
