--- a/news/templates/news/home.html
+++ b/news/templates/news/home.html
@@ -1,18 +1,20 @@
 {% extends 'news/base.html' %}
+{% load static from staticfiles %}
+
 
 {% block content %}
 
 <title> Neutral News </title>
 <div class="content">
   <div class="collumns">
-    {% for Article in article_list %}
-    <div class="collumn">
-      <div class="head"><span class="headline hl3"><a href="post/{{ Article.slug }}">{{ Article.title_text }}</a></span><p><span class="headline hl4">by {{Article.conservative_author}} and {{Article.liberal_author}}</span></p></div>
-      <a href="post/{{ Article.slug }}"><img src="{{ Article.image.url }}"  style='width:100%;' border="0" alt="Null"></a>
-      <br><br>
-      {{ Article.preview | safe | linebreaksbr }}
-    </div>
-    {% endfor %}
+    {% include page_template %}
+
+    {% block js %}
+    {{ block.super }}
+    <script src="http://code.jquery.com/jquery-latest.js"></script>
+    <script src="{% static 'news/js/el-pagination.js' %}"></script>
+    <script>$.endlessPaginate({paginateOnScroll: true});</script>
+    {% endblock %}
   </div>
 </div>
 
