📃 Tweaked Pagination Settings

--- a/news/templates/news/home.html
+++ b/news/templates/news/home.html
@@ -13,7 +13,7 @@
     {{ block.super }}
     <script src="http://code.jquery.com/jquery-latest.js"></script>
     <script src="{% static 'news/js/el-pagination.js' %}"></script>
-    <script>$.endlessPaginate({paginateOnScroll: true});</script>
+    <script>$.endlessPaginate({paginateOnScroll: true, paginateOnScrollMargin: 750});</script>
     {% endblock %}
   </div>
 </div>
